<resources>
    <string name="app_name">Pokemon Tracker Form</string>
    <string name="nationalNumber">National Number</string>
    <string name="base_stats">Base Stats</string>
    <string name="poke_tracker">Poke - Tracker</string>
    <string name="register_new_catch">Register new catch</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="hp">HP</string>
    <string name="defense">Defense</string>
    <string name="attack">Attack</string>
    <string name="nationalnumber">NationalNumber</string>
    <string name="reset">Reset</string>
    <string name="level">Level</string>
</resources>