<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/base_stats"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:text="@string/poke_tracker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="12dp"
        android:text="@string/register_new_catch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="24dp"
        android:text="@string/nationalNumber"
        app:layout_constraintBottom_toTopOf="@+id/Name2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="16dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="16dp"
        android:text="@string/species"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="12dp"
        android:text="@string/gender"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="20dp"
        android:text="Height"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="20dp"

        android:text="Weight"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="108dp"
        android:text="@string/level"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="27dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/hp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="104dp"
        android:text="@string/defense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="12dp"
        android:inputType="number"
        android:text="@string/attack"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/NationalNumber"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:inputType="text"
        android:text="896"
        app:layout_constraintBottom_toTopOf="@+id/Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="181dp"
        android:layout_height="41dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="Glastier"
        app:layout_constraintBottom_toTopOf="@+id/Species"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Name2"
        app:layout_constraintTop_toBottomOf="@+id/NationalNumber" />

    <EditText
        android:id="@+id/HP"
        android:layout_width="195dp"
        android:layout_height="38dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="text"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/Attack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/Level" />

    <EditText
        android:id="@+id/Species"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="text"
        android:text="Wild Horse Pokemon"
        app:layout_constraintBottom_toTopOf="@+id/Gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <RadioGroup
        android:id="@+id/Gender"
        android:layout_width="192dp"
        android:layout_height="32dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/Height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/Species">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:orientation="horizontal"
            android:text="Male" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="Female" />

    </RadioGroup>

    <EditText
        android:id="@+id/Height"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="2.2 m"
        app:layout_constraintBottom_toTopOf="@+id/Weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/Gender" />

    <EditText
        android:id="@+id/Weight"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:inputType="text"
        android:text="800.0 kg"
        app:layout_constraintBottom_toTopOf="@+id/Level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/Height" />

    <Spinner
        android:id="@+id/Level"
        android:layout_width="215dp"
        android:layout_height="19dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="35dp"
        android:entries="@array/levels"
        app:layout_constraintBottom_toTopOf="@+id/HP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/Weight" />

    <EditText
        android:id="@+id/Attack"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="text"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/Defense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/HP" />

    <EditText
        android:id="@+id/Defense"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:inputType="text"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/Attack" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="62dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Defense" />

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="62dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Reset"
        app:layout_constraintTop_toBottomOf="@+id/Defense" />

</androidx.constraintlayout.widget.ConstraintLayout>